# texteller4chemical

./: .gitignore  AGENTS.md  GRAPH_MATCHING_EVALUATION_AGENT_GUIDE.md  README.md  command.txt  main.py  pyproject.toml  requirements-kaggle.txt  skills-lock.json
configs/: chemical_tokens_token88_no_bond.txt  train_edu_chemc.yaml  train_edu_chemc_baseline.yaml  train_edu_chemc_kaggle.yaml  train_edu_chemc_kaggle_fast.yaml  train_edu_chemc_local_16gb.yaml  train_edu_chemc_long_token_finetune.yaml  train_edu_chemc_molscribe_aug.yaml  train_edu_chemc_normed_20ep_local_16gb.yaml  train_edu_chemc_rfl_msd.yaml  train_edu_chemc_rfl_msd_tiny500.yaml  train_edu_chemc_sota_graph_safe.yaml  train_edu_chemc_target_graph_compact.yaml  train_edu_chemc_target_graph_norm.yaml  train_edu_chemc_texteller_msd.yaml  train_edu_chemc_tiny500.yaml  train_edu_chemc_token88_no_bond.yaml
docs/: TEXTELLER_RFL_PIPELINE.md
scripts/: analyze_chemical_token_distribution.py  analyze_graph_errors.py  analyze_original_data_token_distribution.py  analyze_target_length_cutoffs.py  analyze_targets.py  analyze_tokenizer_coverage.py  analyze_two_pass_candidates.py  check_pipeline_io.py  check_rfl_msd_loss_readiness.py  create_rfl_target_dataset.py  create_tiny_train_dataset.py  evaluate.py  evaluate_rfl_msd_pretrain.py  evaluate_texteller_msd.py  materialize_hf_edu_chemc.py  predict.py  prepare_edu_chemc.py  recompute_eval_csv_metrics.py  run_edu_chemc_pipeline.py  run_full_pipeline.sh  train.py  train_texteller_msd.py  update_target_variants.py  validate_graph_norm.py  visualize_error_patterns.py
(+18 files in other folders)
